# Multcloud_remote_upload

./: AGENTS.md  API_ANALYSIS.md  CHANGELOG.md  Makefile  TODO.md
MultCloud CLI v5.0.0/: .multcloud.toml.example  Makefile  pyproject.toml  requirements.txt  setup.py
MultCloud CLI v5.0.0/multcloud/: __init__.py  __main__.py  cli.py  client.py  config.py  crypto.py
MultCloud CLI v5.0.0/scripts/: reverse_engineer_api.py
MultCloud CLI v5.0.0/tests/: test_config.py  test_crypto.py
docs/: API_REFERENCE.md  CLI_USAGE.md  REVERSE_ENGINEERING.md
